--- a/app/src/main/res/layout/activity_lbs.xml
+++ b/app/src/main/res/layout/activity_lbs.xml
@@ -2,9 +2,19 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LBSActivity">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar_lbs"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/Theme.AppCompat.Light"/>
+
 
     <TextView
         android:id="@+id/position_text_view"
