--- a/app/src/main/res/layout/activity_control.xml
+++ b/app/src/main/res/layout/activity_control.xml
@@ -156,7 +156,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="退出"
+        android:text="拍照"
         android:id="@+id/back2"
         android:textSize="20dp"
         android:layout_below="@+id/login_btn_register"
