--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <FrameLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -16,7 +16,40 @@
             android:background="?attr/colorPrimary"
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             app:popupTheme="@style/Theme.AppCompat.Light"/>
-    </FrameLayout>
+
+        <com.youth.banner.Banner
+            xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/banner_show"
+            android:layout_below="@id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="300dp" />
+
+        <TextView
+            android:id="@+id/main_kongbai"
+            android:layout_width="match_parent"
+            android:layout_height="100dp"
+            android:layout_below="@id/banner_show"/>
+
+        <TextView
+            android:id="@+id/main_text_1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/main_kongbai"
+            android:layout_centerInParent="true"
+            android:text="欢迎使用"
+            android:textColor="#55AA55"
+            android:textSize="50sp"/>
+        <TextView
+            android:id="@+id/main_text_2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/main_text_1"
+            android:layout_centerInParent="true"
+            android:text="智能移动家庭安全卫士～"
+            android:textColor="#55AA55"
+            android:textSize="30sp"/>
+
+    </RelativeLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
